Fixes input alignment for leaflet bars on the right

--- a/src/css/leaflet-gplaces-autocomplete.css
+++ b/src/css/leaflet-gplaces-autocomplete.css
@@ -6,6 +6,11 @@
     border: 1px #d0d0d0 solid;
 }
 
+.leaflet-control-container .leaflet-right .leaflet-gac-control {
+    position: absolute;
+    right: 0px;
+}
+
 .leaflet-control-container .leaflet-gac-control:focus {
     outline: none;
 }
